20090307
 - (dtucker) [contrib/aix/buildbff.sh] Only try to rename ssh_prng_cmds if it
   exists (it's not created if OpenSSL's PRNG is self-seeded, eg if the OS
   has a /dev/random).
 - (dtucker) [schnorr.c openbsd-compat/openssl-compat.{c,h}] Add
   EVP_DigestUpdate to the OLD_EVP compatibility functions and tell schnorr.c
   to use them.  Allows building with older OpenSSL versions.
 - (dtucker) [configure.ac defines.h] Check for in_port_t and typedef if needed.
 - (dtucker) [configure.ac] Missing comma in type list.
 - (dtucker) [configure.ac openbsd-compat/openssl-compat.{c,h}]
   EVP_DigestUpdate does not exactly match the other OLD_EVP functions (eg
   in openssl 0.9.6) so add an explicit test for it.

20090306
 - (djm) OpenBSD CVS Sync
   - djm@cvs.openbsd.org 2009/03/05 07:18:19
     [auth2-jpake.c jpake.c jpake.h monitor_wrap.c monitor_wrap.h schnorr.c]
     [sshconnect2.c]
     refactor the (disabled) Schnorr proof code to make it a little more
     generally useful
   - djm@cvs.openbsd.org 2009/03/05 11:30:50
     [uuencode.c]
     document what these functions do so I don't ever have to recuse into
     b64_pton/ntop to remember their return values

20090223
 - (djm) OpenBSD CVS Sync
   - djm@cvs.openbsd.org 2009/02/22 23:50:57
     [ssh_config.5 sshd_config.5]
     don't advertise experimental options
   - djm@cvs.openbsd.org 2009/02/22 23:59:25
     [sshd_config.5]
     missing period
   - djm@cvs.openbsd.org 2009/02/23 00:06:15
     [version.h]
     openssh-5.2
 - (djm) [README] update for 5.2
 - (djm) Release openssh-5.2p1

20090222
 - (djm) OpenBSD CVS Sync
   - tobias@cvs.openbsd.org 2009/02/21 19:32:04
     [misc.c sftp-server-main.c ssh-keygen.c]
     Added missing newlines in error messages.
     ok dtucker

20090221
 - (djm) OpenBSD CVS Sync
   - djm@cvs.openbsd.org 2009/02/17 01:28:32
     [ssh_config]
     sync with revised default ciphers; pointed out by dkrause@
   - djm@cvs.openbsd.org 2009/02/18 04:31:21
     [schnorr.c]